--- a/assets/images/footer/CGU.html
+++ b/assets/images/footer/CGU.html
@@ -1,104 +1,124 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <html>
+<html>
     <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <!-- -->
-      <meta http-equiv="Content-Type" content="text/html/php/twig" />
-      <meta name="description" content="Projet de groupe titre professionnel" />
-      <meta name="author" content="NSIM / ILLARIONOVA / PASCAL / BIROLINI" />
-      <link rel="stylesheet" type="text/css" href="app.css" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- -->
+        <meta name="description" content="Annuaire moto-taxi taxi-moto motos-taxis taxis-motos France"/>
+        <meta name="author" content="BIROLINI Herve"/>
+        
+        <link rel="SHORTCUT ICON" type="image/png" href="{{ asset(sImgPath ~ 'banner/favicon.png') }}"/>
+        <!-- <link rel="icon" type="image/png" href="{{ asset(sFaviconFullname) }}"/> -->
+        <title>2 Wheels 4 Motion - CGU</title>
     </head>
-
-
 <body>
-  <h1 style="text-align:center"><strong >CONDITIONS GÉNÉRALES DE VENTE</strong></h1>
-<h2>Préambule</h2>
+	<style>
+		body{
+			background-color: lightgray;
+		}
+		h2{
+			margin-bottom:-0.1em;
+		}
+		h3{
+			text-decoration:underline;
+			margin-bottom:-0.1em;
+		}
+	</style>
+	
+	<!--  -->
+	<h1 style="text-align:center;margin-top:2em;"><strong >CONDITIONS GÉNÉRALES D'UTILISATION</strong></h1>
+	<div style="display:flex;flex-direction:row;">
+		<div style="display:flex;flex-direction:column;padding-left:3%;"></div>
+		<!--  -->
+		<div style="display:flex;flex-direction:column">
+			<h2>Préambule</h2>
+			<p>
+				Les présentes conditions d’utilisation ont pour objet de définir les modalités d’accès et d’utilisation du site http?://www.2wheels4motion.fr et des services de taxi moto avec chauffeurs proposés par celui-ci. De plus, la consultation du site est subordonnée à l’acceptation intégrale et au respect des présentes conditions d’utilisation.
+				L' "Annuaire 2Wheels4Motion" se réserve le droit de les modifier ou de les mettre à jour à tout moment.
+			</p>
 
- 
-<p>Les conditions générales de vente suivantes régissent les relations entre « Le tiroir du terroir » et les utilisateurs du site « Le tiroir du terroir ».
-  Le site « Le tiroir du terroir » est la propriété pleine et entière de la société « Le tiroir du terroir », ainsi que tous les droits y afférents. Société immatriculée au registre du commerce et des entreprises de Trappes, sous le N° de SIRET : 000000000000000, dont le siège social se situe à : 2 Rue Eugène Pottier, 78190 Trappes.</p>
- 
-<h2>Produits et Services</h2>
+			<h3>1. Services</h3>
+			<p>
+				L' "Annuaire 2Wheels4Motion" propose ses services aux chauffeurs professionnels de taxi-moto exerçant sur le territoire français, quelque soit leur région d'exercice.
+				Ces services aux chauffeurs consistent dans leur référencement, la proposition de courses demandées par les usagers passagers, et correspondantes à leur zone d'activité,
+				mais aussi la génération et l'envoi des devis et factures, ainsi que leur gestion dans leur tableau de bord personnel.<br>
+				L'Annuaire propose aux usagers clients des taxis-motos, de formuler facilement et rapidement, avec précision, leurs besoins de course,
+				et de les transmettre automatiquement à tous les chauffeurs en exercice dans les zones concernées par les lieux de prise en charge et de dépose.
+				De plus, les usagers pourront grâce à l'Annuaire, gérer leurs demandes envoyées, les devis reçus en réponses, et les courses effectuées et leur facture...
+			</p>
 
-<p>Pour chaque produit du catalogue, sont indiqués la dénomination, le descriptif, le conditionnement et la quantité. Chaque produit est généralement illustré  par une photo ; cependant, les photos représentant les produits ne sont pas contractuelles et ne peuvent en aucun cas engager la responsabilité de « Le tiroir du terroir » envers l’acheteur.
-La disponibilité des produits présentés dans le catalogue est indiquée. Si un article devenait indisponible durant la commande de l’internaute, ce dernier sera prévenu dans les meilleurs délais  par e-mail de l’indisponibilité du produit.</p>
+			<h3>2. Commande d'un taxi-moto / Demande de course</h3>
+			<p>
+				Pour commander un taxi moto ou une moto avec chauffeur, le client dispose de plusieurs moyens :
+				<br>- en trouvant le(s) chauffeur(s), et en le(s) contactant directement sur son(leur) téléphone, ou via son(leur) courriel.
+				<br>- en utilisant l'outil de formulation de son besoin, demande qui sera alors automatiquement transmise,
+				et qui permettra alors d'enclencher la générations des documents gérables par leur tableau de bord.
+			</p>
 
- 
-    <h2>Commandes</h2> 
- 
-<p>Lors de la validation de la commande, l’internaute reconnaît avoir pris connaissance des conditions Générales de Vente  et s’engage à les accepter.
-  L’internaute recevra un mail de confirmation de commande après validation de sa commande qui indiquera la désignation des produits, la quantité, le prix et les modalités de livraison.
-  Avant la confirmation de la commande, « Le tiroir du terroir » se réserve le droit de vérifier l’identité, l’adresse et les coordonnées bancaires de l’internaute.  En cas de litige relatif au paiement « Le tiroir du terroir » se réserve le droit d’annuler la commande.</p>
+			<h3>3. Prestations, responsabilités et garanties</h3>
+			<p>
+				Les services de l'Annuaire se limitent à la mise en relation entre les professionnels et les clients,
+				ainsi que la gestion des documents contractuels qui les lient
+				(dans le cas d'une demande exprimée avec le formulaire de l'Annuaire).
+				La responsabilité de l'Annuaire 2Wheels4Motion se limite à la recherche d’un taxi-moto aux adresses indiquées par le client.
+				L’exécution de la prestation de transport est placée sous la responsabilité propre de la société ou du chauffeur à moto.
+				En cas de retard du fait de la société ou du chauffeur de taxi-moto qui a accepté la course,
+				d’inexécution ou de mauvaise exécution de la course par ce dernier, la responsabilité de l'Annuaire ne pourra être engagée.
+				<br><br>
+				Chaque professionnel se doit d'exercer sa profession dans le respect du code de la route, des règles de sécurité,
+				et de la législation en vigueur qui impose d'avoir souscrit un contrat d’assurance spécifique lié à son activité de « Transport de personne à titre onéreux à moto ».
+				Dans ces conditions, il est de la responsabilité du client de vérifier la validité en cours de la Carte Professionnelle De Conducteur de VMDTR, et de ses assurances.
+			</p>
 
-<h2>Les prix</h2>
+			<h3>4. Conditions d'hygiène et de sécurité à bord du véhicule</h3>
+			<p>
+				Le professionnel dispose des équipements pour le passager, et pourra vous proposer un casque avec une charlotte et des gants désinfectés après chaque utilisation,
+				ainsi qu'une veste...
+				<br>
+				Des recommandations concernant la posture et les gestes sont dispensés par le chauffeurs.
+				<br>
+				Le sujet des bagages doit avoir été abordé avec le chauffeur afin d'éviter tout malentendu.
+				Dans tous les cas, le transport de substances inflammables, explosives, corrosives et/ou toxique est strictement proscrit.
+				Le non respect de cette clause engage la totale responsabilité du passager et l’expose à une annulation de son transport et ce à tout moment sans dédommagement possible.
+			</p>
 
-<p>Les prix de vente des produits sont indiqués en euros toutes taxes comprises et hors frais de livraison. Le montant des frais de livraison sera indiqué sur le bon de commande avant validation de celle-ci.
-  Le prix indiqué lors de la commande est garantie à l’acheteur. « Le tiroir du terroir » se réserve le droit de modifier les prix mais le prix indiqué lors de la commande de l’acheteur prévaut lors de la facturation sur le prix modifié.</p>
+			<h3>5. Retard et annulation</h3>
+			<p>
+				Tout retard éventuel sera facturé 1 euro la minute au delà des dix minutes d’attente offerte.
+				<br>
+				Même si le chauffeur de taxi-moto se doit d'avoir défini une heure de rendez-vous cohérente avec la demande du client,
+				en cas de retard de celui-ci, aucun dédommagement ne peut être réclamé si l’objet du retard est indépendant de sa volonté (par exemple: intempéries, accidents...).
+				<br><br>
+				Toute absence du client au rendez-vous dont l’heure et le jour auront été validés et confirmés entre les 2 parties, sera facturée dans son intégralité.
+				<br>
+				Toute annulation exprimée dans un délai inférieur ou égal à 2h avant le rendez-vous sera facturé 30% du devis établi.
+			</p>
 
-<h2>Cas particulier des pays hors communauté européenne :</h2>
+			<h3>6. Tarifs et conditions de paiement</h3>
+			<p>
+				Une grille tarifaire est disponible sur le site de l'Annuaire 2wheels4motion, à l'attention de tous les visiteurs.
+				<br>
+				Ces tarifs, bien que cohérents, sont présentés à titre indicatifs.
+				L'outil de génération des devis s'appui sur ces tarifs pour proposer un "brouillon" aux chauffeurs,
+				qui étant libres de pratiquer des tarifs légèrement différents, pourront adapter leurs devis à leurs propres tarifs...
+				<br><br>
+				Le règlement de la course se fait directement auprès du chauffeur, selon les conditions proposées par celui-ci.
+				Attention ! Anticipé la question du mode de paiement pour éviter tout malentendu.
+			</p>
 
-<p>Pour toute commande vers un autre pays que la France métropolitaine le client est considéré comme l’importateur des produits. Pour toutes les livraisons hors de l’union européenne et DOM-TOM, le prix facturé sera calculé hors-taxe. Dès lors, les droits de douane ou taxes locales seront à la charge exclusive du client. Nous lui conseillons de se renseigner auprès des autorités locales afin de connaître les taxes et frais de douane pouvant être exigibles par l’état dont l’importateur dépend. Ces droits et autres sommes ne sont dans aucun cas de la responsabilité de « Le tiroir du terroir ».
-  Certains produits peuvent également faire l’objet de limitations d’importation dans certains pays ; nous vous conseillons de vous en informer auprès des autorités locales.
-</p>
+			<h3>7. Loi et litige</h3>
+			<p>
+				Propriété intellectuelle
+				Tous les éléments (visuels, sonores, textuels… etc.), présents sur le site de « L'Annuaire des taxis-motos de France (2wheels4motion.fr) »,
+				restent et demeurent l’entière propriété de « L'Annuaire des taxis-motos de France ».
+				<br>
+				Aucune reproduction, exploitation, diffusion ou utilisation ne peut être faite sans l’autorisation expresse du propriétaire de « L'Annuaire des taxis-motos de France ».
+			</p>
+		</div>
+	</div>
 
-<h2>Le Paiement</h2>
-
-<p>Le paiement de la commande passée à « Le tiroir du terroir » se fait par paiement comptant le jour de la commande par  carte bancaire, par chèque ou par règlement Paypal. Le règlement par carte bancaire se fait par un système sécurisé mis en place avec Paypal PAIEMENT SECURISE (Banque Populaire).
-  Pour tout règlement par chèque, celui-ci doit provenir d’une banque domiciliée en France et l’expédition de la commande se fera à réception et vérification du chèque par « Le tiroir du terroir ».
-</p>
-
-<h2>Livraison </h2>
-
-<p>Pour les livraisons en France Métropolitaine, les produits commandés seront livrés à l’adresse de livraison ou au point relais indiqué par l’acheteur et ce par Colissimo, Mondial Relay, Chronopost et autre transporteur. Sauf information contraire au client, les produits seront expédiés le lendemain de la validation de la commande sur le site. Toute commande passée entre le vendredi 12h00 et le dimanche soir sera expédiée le lundi matin.
-  « Le tiroir du terroir » estime le délai de livraison entre 48 et 72h pour les livraisons en colissimo ou 3 à 5 jours pour les livraisons en point relais. Toutefois, le délai moyen de livraison en France Métropolitaine est de 5 jours ouvrables et « Le tiroir du terroir » ne sera pas responsable  d’éventuels retards dans le cas de dysfonctionnement des services postaux, des transporteurs routiers  ou d’incidents climatiques. 
-  Pour les livraisons dans l’Union Européenne et la Suisse, le délai est généralement de 7 ouvrés. Pour les autres pays et les DOM/TOM,  les délais seront indiqués selon la distance et le moyen d’acheminement. 
-  Les expéditions vers l'étranger Hors UE se font hors taxe,  des taxes peuvent être réclamées à l'arrivée du colis pour le retrait de ce dernier. Ces frais ne pourront pas être remboursés par Le tiroir du terroir.
-</p>
-
-<h2>Rétractation et Réclamation</h2>
-
-<p>L’internaute peut disposer de son droit de rétractation dans un délai de 14 jours à compter de la réception  ou du retrait du colis sans avoir à justifier de motifs ni à devoir des pénalités.
-  Dans le cas énoncé, « Le tiroir du terroir » propose à l’internaute de contacter le service clientèle pour l’en informer. Le retour des produits se fera à la charge de l’internaute par la poste dans leur état d’origine et complets accompagnés d’une copie de la facture d’achat à l’adresse suivante :
-  Le tiroir du terroir – 2 Rue Eugène Pottier, 78190 Trappes.
-   Le tiroir du terroir  procédera au remboursement dans un délai maximal de 30 jours.
-  Ne seront pas acceptés, les retours de produits ayant été  ouverts ou dont l’emballage aurait été détérioré.
-</p>
-
-<p>En cas de colis perdu ( l’internaute n’a jamais reçu le colis, ce dernier a été égaré par la poste ou le transporteur), « Le tiroir du terroir » procédera à un nouvel envoi à sa charge. L’internaute  attestera alors sur l’honneur de ne jamais avoir reçu le colis et de refuser le 1er envoi s’il venait à le recevoir finalement. Cette attestation permettra à « Le tiroir du terroir » de mener dès lors toute action qu’il jugera utile.
-  Pour tout colis défectueux ou abîmé, « Le tiroir du terroir » demande à l’internaute de le contacter au service clientèle. Lors d’un échange entre les deux parties, après les vérifications utiles, « Le tiroir du terroir » décidera ou non de procéder au remboursement.
-  Les retours de colis ne seront pas acceptés par « Le tiroir du terroir » au-delà d’un délai d’ un mois suivant la date de la commande.
-  « Le tiroir du terroir » invite l’internaute à contacter son service clientèle pour toute insatisfaction liée au produit. Selon les motifs exposés, « Le tiroir du terroir », proposera ou non le remboursement des produits hors frais de port.
-  Dans le cas de non retrait du colis par le client au point de livraison, le colis sera normalement retourné à Le tiroir du terroir par le transporteur. Si tel est le cas, et si la marchandise est intacte Le tiroir du terroir remboursera la marchandise au client une fois réceptionné le colis en retour. Les frais de port resteront à la charge du client.
-</p>
-
-<p>La responsabilité civile ou pénale de « Le tiroir du terroir » n’est pas engagée pour tout usage impropre des produits commercialisés ou pour des dommages dont la responsabilité incomberait au fournisseur du produit.
-  Toutes les publications sur le site concernant les produits ou autre peuvent être retirées ou modifiées par « Le tiroir du terroir ».
-</p>
-
-<h2>Loi et litige</h2>
-
-<p>Les présentes Conditions Générales de Vente sont soumises à la loi Française et notamment aux articles L.121-16 à L. 121-20 du Code de la Consommation.
-  En cas de litige, l’internaute s’adressera au vendeur en priorité afin de convenir d’une solution amiable. Si tel n’était pas le cas, les litiges seront soumis au tribunal de la juridiction du siège social de « Le tiroir du terroir »
-  Propriété intellectuelle
-  Tous les éléments (visuels, sonores, textuels…etc.), présents sur le site de « Le tiroir du terroir », restent et demeurent l’entière propriété de « Le tiroir du terroir ». Aucune reproduction, exploitation, diffusion ou utilisation ne peut être faite sans l’autorisation expresse de « Le tiroir du terroir ».
-</p>
-
-<h2>Confidentialité des données</h2>
-
-<p>Selon la loi informatique et libertés du 6 janvier 1978, l’internaute dispose d’un droit d’accès et de rectification des données le concernant et conservées par le vendeur.
-  Dans le cadre du fonctionnement du site « Le tiroir du terroir », « Le tiroir du terroir » peut être amené à transmettre des données non personnelles à un tiers autorisé de type «  google, shopzilla, … etc., par l’utilisation de cookies tiers ayant pour but de collecter et d’utiliser les données de navigation des utilisateurs du site « Le tiroir du terroir ». cette  utilisation est faite dans le respect des dispositions émises par la loi Informatique et Liberté du 6 janvier 1978, modifiée par celle du 06 Août 2004, notamment dans le cadre de la Charte du respect de la vie privée.
-</p>
-
-
-
-<footer style="font-size: smaller;">
-Le tiroir du terroir est enregistré auprès de la CNIL sous le numéro de déclaration : 1620927 v 5 <br>
- CGV mises à jour le  2 mai 2021  
-</footer>
-
+    <footer style="font-size:smaller;text-align:center;margin-top:3em;margin-bottom:3em;">Dernière mise à Jour des CGU : 31/10/2021</footer>
 
 </body>
 </html>
